tests/invalid/definite/Subtype_CompileFail_7.whiley
define scf7nat as int requires $ < 0

void System::main([string] args):
    (scf7nat f) x = (f:-1)
    x.f = x.f + 1
    
